fix for text alignment. fix for heading spacing above and below section padding.

--- a/style.less
+++ b/style.less
@@ -1,21 +1,29 @@
 // @import ~"@{plPluginsRootsms-headings}/assets/less/less_file_name_without_extension";
 
+.section-sms-headings {
+	hgroup .sms-heading{
+		margin: 0;
+		padding: 0;
+		&:first-child{
+			padding-top: 0;
+		}
+	}
+	& > .pl-section-pad {
+		margin-top: 0;
+		margin-bottom: 0 !important;
+		padding-top: 0 !important;
+		padding-bottom: 0 !important;
+	}
+}
+.sms-heading{
+	&.align-center {text-align: center!important}
+	&.align-left {text-align: left!important}
+	&.align-right {text-align: right!important}
+}
+
 // .section-rsmm-headings > .pl-section-pad{
 // 	padding: 0;
 // }
 
 // .heading--primary, .heading--secondary, .heading--tertiary{
-
-// .sms-light .section-sms-headings{
-// 	background: #333;
-// 	.sms-heading{
-// 		color: #fff;
-// 	}
-// }
-
-// .sms-dark .section-sms-headings{
-// 	background: #fff;
-// 	.sms-heading{
-// 		color: #333;
-// 	}
 // }
